Use CorsFilter bean instead of CorsConfigurationSource